--- a/frontend/app/(pages)/activities/activityCard.module.scss
+++ b/frontend/app/(pages)/activities/activityCard.module.scss
@@ -4,17 +4,25 @@
   gap: 2rem;
   padding: 2rem;
   margin-bottom: 2rem;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
 
   &.reverse {
     flex-direction: row-reverse;
+
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
   }
 }
 
 .imageContainer {
   position: relative;
+  flex: 1;
   width: 100%;
-  max-width: 550px;
   height: auto;
+  min-height: 100%;
   overflow: hidden;
 
   .image {
@@ -22,13 +30,17 @@
     height: 100%;
     object-fit: cover;
   }
+
+  @media (min-width: 1200px) {
+    max-width: 500px;
+  }
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  line-height: 2rem;
 }
 
 .buttonContainer {
@@ -42,7 +54,7 @@
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 600;
-  line-height: 4.6875rem; /* 312.5% */
+  line-height: 4.6875rem;
   letter-spacing: 0.27rem;
   color: var(--Light-Sand, #d9ad7c);
 }
@@ -81,5 +93,134 @@
       color: #555;
       margin-bottom: 0.5rem;
     }
+  }
+}
+
+@media (max-width: 1200px) {
+  .card {
+    max-width: 95%;
+  }
+
+  .imageContainer {
+    max-width: 100%;
+  }
+
+  .title {
+    font-size: 1.4rem;
+    line-height: 4rem;
+  }
+
+  .description {
+    font-size: 0.95rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .card {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.5rem;
+    max-width: 90%;
+  }
+
+  .imageContainer {
+    max-width: 100%;
+    height: auto;
+    min-height: 100%;
+  }
+
+  .title {
+    font-size: 1.3rem;
+    line-height: 3.5rem;
+  }
+
+  .titleLine {
+    max-width: 350px;
+  }
+
+  .description {
+    font-size: 0.95rem;
+  }
+
+  .buttonContainer {
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1.2rem;
+    max-width: 85%;
+  }
+
+  .imageContainer {
+    max-width: 100%;
+    height: auto;
+    min-height: 100%;
+  }
+
+  .title {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    margin: 15px 0 25px 0;
+  }
+
+  .titleLine {
+    max-width: 300px;
+  }
+
+  .description {
+    font-size: 0.9rem;
+  }
+
+  .buttonContainer {
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    padding: 1rem;
+    gap: 0.8rem;
+    max-width: 95%;
+  }
+
+  .imageContainer {
+    max-width: 100%;
+    height: auto;
+    min-height: 100%;
+  }
+
+  .title {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 15px 0 25px 0;
+  }
+
+  .titleLine {
+    max-width: 250px;
+  }
+
+  .description {
+    font-size: 0.85rem;
+  }
+
+  .guidelines,
+  .rates {
+    h4 {
+      font-size: 1rem;
+    }
+
+    ul li {
+      font-size: 0.9rem;
+    }
+  }
+
+  .buttonContainer {
+    justify-content: flex-end;
   }
 }
